@startuml
hide empty members

class OpenNmeaImpl

OpenNmeaImplTests : void set_serial_interface(SerialInterface<>* serial_interface)

SerialInterfaceMock : MOCK_METHOD(open)
SerialInterfaceMock : MOCK_METHOD(is_open)
SerialInterfaceMock : MOCK_METHOD(close)
SerialInterfaceMock : MOCK_METHOD(read_line)

class SerialInterface<asio::serial_port>

SerialInterface <|-- SerialInterfaceMock
OpenNmeaImpl o-- "1" SerialInterfaceMock
OpenNmeaImpl <|-- OpenNmeaImplTests
@enduml
